# try

MiniRedditCloneApi/: .gitignore  MiniRedditCloneApi.csproj  MiniRedditCloneApi.http  MiniRedditCloneApi.sln  Program.cs  appsettings.Development.json  appsettings.json
MiniRedditCloneApi/Controllers/: AuthController.cs  HerdsController.cs  InsightsController.cs  NerdsController.cs
MiniRedditCloneApi/Data/: MiniRedditCloneApiDbContext.cs
MiniRedditCloneApi/Mapping/: DomainProfile.cs  HerdProfile.cs  InsightProfile.cs  NerdProfile.cs  ResponseProfile.cs
MiniRedditCloneApi/Migrations/: 20251202151811_StoreImagesInDb.Designer.cs  20251202151811_StoreImagesInDb.cs  20251202191129_AddAvatarSupport.Designer.cs  20251202191129_AddAvatarSupport.cs  20251203173600_AddDomainsAndTags.Designer.cs  20251203173600_AddDomainsAndTags.cs  20251203193623_CleanUpModels.Designer.cs  20251203193623_CleanUpModels.cs  20251204193101_AddRolePromotionsAndDemotions.Designer.cs  20251204193101_AddRolePromotionsAndDemotions.cs  20251211143601_ManuallyCreateHerdDomainReference.Designer.cs  20251211143601_ManuallyCreateHerdDomainReference.cs  20251212162355_AddBansAndRules.Designer.cs  (+8 more)
mini-reddit-clone-frontend/: .editorconfig  .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
nsfw_detection_microservice/: .python-version  README.md  __init__.py  models.py  moderation_service.py  pyproject.toml  thresholds.py
nsfw_detection_microservice/moderators/: clip.py  detoxifier.py  nsfw_image_detector.py
(+92 files in other folders)
